fix(tester.comp) prevent 'scrollToTop' fab from overlapping content

--- a/src/app/tester/tester.component.scss
+++ b/src/app/tester/tester.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: block;
   overflow-y: visible;
+  margin-bottom: 64px;
 }
 #play-btn {
   background-color: #FF7274;
